--- a/css/responsive.css
+++ b/css/responsive.css
@@ -42,7 +42,7 @@ body{
 }
 
 .first-container-bg{
-    background: #d9a928;
+    background: #dc4a38;
     /* margin-bottom: -10px; */
 }
 /* social icon Css */
