removed print  style

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -231,7 +231,7 @@ background:#EB4924;
 /* card Right side */
 
 .notice {
-    background: #ffffffe3;
+    background: #ffffff;
     padding: 16px;
     min-height: 86px;
     margin-bottom: 14px;
