--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,6 +31,15 @@ h1{
     transition: transform 1.2s ease-in-out !important;
 }
 
+.faceBookstyle{
+    border:none;
+    overflow:hidden;
+    padding-left: 20px;
+     padding-top: 5px;
+     color: #ffffff;
+     width:100%;
+      height:35px;
+}
 
 /* fonts */
 
