--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,10 +15,11 @@ h1{
 
 }
 
-.background{
-    background-color: cadetblue;
+.background-white{
+    background: #ffffff;
 
 }
+
 
 .padding-zero{
     padding: 0px;
@@ -48,10 +49,16 @@ h1{
     src: url(./../fonts/MontDemo-Heavy.otf);
 }
 
+.fontSize26{
+    font-size: 27px !important;
+    padding: 5px 0 5px;
+}
+
 /* css  */
 
-.photo-01 {
-    background: url(../img/userpic01.jpg);
+
+#photo-01 {
+    background: url(../img/userpic01.jpg) !important;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -286,7 +293,7 @@ background:#EB4924;
     width: 100%;
     text-decoration: none;
     color: #ffffff;
-    padding: 27px;
+    padding: 22px;
 }
 .menuitem a img {
     font-size: 18px;
@@ -554,3 +561,77 @@ background:#EB4924;
     color: #fff;
 }
 
+
+
+/*slider switch css */
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+  
+  em {
+    margin-left: 10px;
+    font-size: 1rem;
+  }
+}
+.theme-switch {
+  display: inline-block;
+  height: 26px;
+  position: relative;
+  width: 45px;
+}
+
+.theme-switch input {
+  display:none;
+}
+
+.slider {
+  background-color: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+    background-color: #fff;
+    bottom: 3px;
+    content: "";
+    height: 22px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 22px;
+}
+
+input:checked + .slider {
+    background-color: #d2c4c4 !important;
+}
+
+input:checked + .slider:before {
+  transform: translateX(15px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+@media (prefers-color-scheme: dark) {
+    body {
+      background-color: black;
+      color: white;
+    }
+  }
+  @media (prefers-color-scheme: light) {
+    body {
+      background-color: white;
+      color: black;
+    }
+  }
