--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,7 +58,7 @@ h1{
 
 
 #photo-01 {
-    background: url(../img/userpic01.jpg) !important;
+    background: url(../img/userpic01.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
