--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -2,3 +2,7 @@
     background: #000000;
     color: #ffff !important;
 }
+.darkmodeList{
+    background: #000000 !important;
+    color: #ffff !important;
+}
