--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,7 +66,7 @@ h1{
 }
 
 .first-container-bg{
-    background: #dc4a38;
+    background: #b65995fa;
     /* margin-bottom: -10px; */
 }
 /* social icon Css */
