--- a/css/responsive.css
+++ b/css/responsive.css
@@ -72,7 +72,7 @@ h1{
 /* social icon Css */
 
 .social-icons-ql{
-    background: #ffffff;
+    /* background: #ffffff; */
     padding: 0px;
     display: flex;
     margin:0px;
