--- a/css/progress.css
+++ b/css/progress.css
@@ -73,20 +73,20 @@
 .progress.blue .progress-bar{
     border-color: #049dff;
 }
-.progress.blue .progress-right .progress-bar{
-    animation: loading-2 1.5s linear forwards 1.8s;
+.progress.blue .progress-left .progress-bar{
+    animation: reactjs 1.5s linear forwards 1.8s;
 }
 .progress.yellow .progress-bar{
     border-color: #fdba04;
 }
 .progress.yellow .progress-left .progress-bar{
-    animation: loading-3 1s linear forwards 1.8s;
+    animation: reactNative 1s linear forwards 1.8s;
 }
 .progress.pink .progress-bar{
     border-color: #ed687c;
 }
 .progress.pink .progress-left .progress-bar{
-    animation: loading-4 0.4s linear forwards 1.8s;
+    animation: laravel 0.4s linear forwards 1.8s;
 }
 .progress.green .progress-bar{
     border-color: #1abc9c;
@@ -104,17 +104,27 @@
         transform: rotate(180deg);
     }
 }
-@keyframes loading-2{
+@keyframes reactjs{
     0%{
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
     }
     100%{
-        /*-webkit-transform: rotate(180deg);*/
-        transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+        transform: rotate(150deg);
     }
 }
-@keyframes loading-3{
+@keyframes reactNative{
+    0%{
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100%{
+        -webkit-transform: rotate(165deg);
+        transform: rotate(165deg);
+    }
+}
+@keyframes laravel{
     0%{
         -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
@@ -122,16 +132,6 @@
     100%{
         -webkit-transform: rotate(90deg);
         transform: rotate(90deg);
-    }
-}
-@keyframes loading-4{
-    0%{
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100%{
-        -webkit-transform: rotate(5deg);
-        transform: rotate(5deg);
     }
 }
 @keyframes loading-5{
