--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -12,3 +12,24 @@
     padding-left: 10px;
     color: #ffff;
 }
+.card-title-dark {
+    position: relative;
+    border: none;
+    height: 1px;
+    background: #999;
+    text-align: center;
+    margin-bottom: 50px;
+    margin-top: 50px;
+  }
+  
+.card-title-dark::before {
+    content: attr(data-content);
+    display: inline-block;
+    background-color: #000000 !important;
+    border-radius: 30rem;
+    padding: 10px 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
