--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -32,4 +32,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-  }
+}
+.year-dark{
+    background-color: #252525 !important;
+}
