--- a/css/timeline.css
+++ b/css/timeline.css
@@ -79,7 +79,8 @@
     height: 10px;
     border-top: 7px dotted #333;
     position: absolute;
-    left: -92px
+    left: -92px;
+    text-align: left;
 }
 
 .experience-timeline .year {
@@ -110,7 +111,7 @@
 }
 
 .experience-timeline .inner-content {
-    padding: 20px 0
+    padding: 20px 0;
 }
 
 .experience-timeline .title {
