--- a/css/responsive.css
+++ b/css/responsive.css
@@ -179,6 +179,13 @@ background:#EB4924;
         display: none;
     }
     
+    .experience-timeline .year {
+        left: 0px !important;
+    }
+    .experience-timeline .inner-content {
+
+        padding: 12px !important;
+    }
    
     
 }
