--- a/css/timeline.css
+++ b/css/timeline.css
@@ -35,11 +35,11 @@
 
 .experience-timeline:before {
     content: "";
-    width: 5px;
+    width: 4px;
     height: 70%;
     background: #333;
     position: absolute;
-    top: 70px;
+    top: 65px;
     left: 50%;
     transform: translateX(-50%)
 }
@@ -63,24 +63,26 @@
     height: 20px;
     border-radius: 50%;
     background: #fff;
-    border: 5px solid #333;
+    border: 4px solid #333;
     position: absolute;
     left: -10px
 }
 
 .experience-timeline .timeline-content {
     display: block;
-    padding-left: 150px;
-    position: relative
+    padding-left: 110px;
+    position: relative;
+    text-decoration: unset;
 }
 
 .experience-timeline .timeline-content:before {
-    width: 90px;
+    width: 65px;
     height: 10px;
-    border-top: 7px dotted #333;
+    border-top: 5px dotted #333;
     position: absolute;
     left: -92px;
     text-align: left;
+    
 }
 
 .experience-timeline .year {
@@ -96,7 +98,7 @@
     box-shadow: inset 0 0 10px rgba(0, 0, 0, .4);
     position: absolute;
     top: 0;
-    left: 0
+    left: -25px
 }
 
 .experience-timeline .year:before {
@@ -115,7 +117,8 @@
 }
 
 .experience-timeline .title {
-    font-size: 24px;
+    font-size: 20px;
+    font-weight: 600;
     color: #f54957;
     text-transform: uppercase;
     margin: 0 0 5px
@@ -123,7 +126,7 @@
 
 .experience-timeline .description {
     font-size: 14px;
-    color: #6f6f6f;
+    color: #504237;
     margin: 0 0 5px
 }
 
@@ -139,7 +142,7 @@
 }
 
 .experience-timeline .timeline:nth-child(2n) .timeline-content {
-    padding: 0 150px 0 0
+    padding: 0 110px 0 0
 }
 
 .experience-timeline .timeline:nth-child(2n) .timeline-content:before {
@@ -147,7 +150,7 @@
 }
 
 .experience-timeline .timeline:nth-child(2n) .year {
-    right: 0
+    right: -25px;
 }
 
 .experience-timeline .timeline:nth-child(2n) .year:before {
@@ -413,7 +416,7 @@
 
 .main-education-timeline .description {
     font-size: 16px;
-    color: #fff;
+    color: #504237;
     line-height: 24px;
     margin: 0
 }
